--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.88.0",
     "next": "16.0.10",
+    "openai": "^6.15.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
