--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.88.0",
+    "@vercel/analytics": "^1.6.1",
     "next": "16.0.10",
     "openai": "^6.15.0",
     "react": "19.2.1",
